--- a/web/maqueta-web/.gitignore
+++ b/web/maqueta-web/.gitignore
@@ -6,10 +6,14 @@
 /out-tsc
 /bazel-out
 
+# Angular
+/.angular
+
 # Node
 /node_modules
 npm-debug.log
 yarn-error.log
+package-lock.json
 
 # IDEs and editors
 .idea/
@@ -21,6 +25,7 @@ yarn-error.log
 *.sublime-workspace
 
 # Visual Studio Code
+/.vscode
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
